tests/snapshots/snapshots__fixture_go_multierror_level2.snap
---
source: tests/snapshots.rs
expression: output
---
CHANGELOG.md
     1→## Unreleased
     3→### Improvements
     5→### Changes
     7→### Fixed
     9→### Security
README.md
     1→# go-multierror
    12→## Migrating to `errors.Join`
   104→## Installation and Docs
   111→### Requires go version 1.13 or newer
   129→## Usage
append.go
    14→func Append(err error, errs ...error) *Error {
flatten.go
     8→func Flatten(err error) error {
    20→func flatten(err error, flatErr *Error) {
format.go
    13→type ErrorFormatFunc func([]error) string
    17→func ListFormatFunc(es []error) string {
group.go
    10→type Group struct {
    20→func (g *Group) Go(f func() error) {
    36→func (g *Group) Wait() *Error {
multierror.go
    18→func (e *Error) Error() string {
    31→func (e *Error) ErrorOrNil() error {
    42→func (e *Error) GoString() string {
    53→func (e *Error) WrappedErrors() []error {
    71→func (e *Error) Unwrap() error {
    99→type chain []error
   102→func (e chain) Error() string {
   108→func (e chain) Unwrap() error {
   117→func (e chain) As(target interface{}) bool {
   122→func (e chain) Is(target error) bool {
prefix.go
    16→func Prefix(err error, prefix string) error {
sort.go
     7→func (err *Error) Len() int {
    16→func (err Error) Swap(i, j int) {
    21→func (err Error) Less(i, j int) bool {
